--- a/volume-backend.yaml
+++ b/volume-backend.yaml
@@ -8,7 +8,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: my-storage-class
+  storageClassName: manual
   hostPath:
     path: /mnt/data
 
@@ -17,16 +17,11 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  creationTimestamp: null
-  labels:
-    app: django-static-volume
   name: django-static-volume
 spec:
+  storageClassName: manual
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteOnce
   resources:
     requests:
       storage: 100Mi
-  storageClassName: my-storage-class
-status: {}
-
