--- a/volume-db.yaml
+++ b/volume-db.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: mariadb-pv
+  name: db-volume
 spec:
   capacity:
     storage: 100Mi
@@ -17,7 +17,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mariadb-pvc
+  name: mariadb-volume
 spec:
   storageClassName: manual
   accessModes:
