--- a/volume-backend.yaml
+++ b/volume-backend.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: my-volume
+  name: backend-pv
 spec:
   capacity:
     storage: 100Mi
@@ -10,7 +10,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: manual
   hostPath:
-    path: /mnt/data
+    path: /mnt/backend/data
 
 ---
 
